[workspace]
members = ["crates/*"]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

############
# From https://bevy-cheatbook.github.io/pitfalls/performance.html?highlight=debug#unoptimized-debug-builds

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

############
