[package]
name = "example_client"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"
litlnet_client_bevy = { path = "../litlnet_client_bevy" }
# litlnet_tcp = { path = "../litlnet_tcp" }
litlnet_websocket = { path = "../litlnet_websocket" }
example_shared = { path = "../example_shared"}
bevy = "*"