[package]
name = "example_client"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
example_client_logic = { path = "../example_client_logic" }
bevy = "0.13"
