[package]
name = "example_client_web"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
litlnet_trait = { path = "../litlnet_trait"}
example_shared = { path = "../example_shared"}
bevy = "*"
wasm-bindgen = "0.2.79"
js-sys = "0.3"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]