[package]
name = "example_client_web"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
example_client_logic = { path = "../example_client_logic" }
bevy = "*"
wasm-bindgen = "0.2.79"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]