[package]
name = "example_server"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"
litlnet_trait = { path = "../litlnet_trait" }
litlnet_server_bevy = { path = "../litlnet_server_bevy" }
litlnet_websocket_server = { path = "../litlnet_websocket_server" }
example_shared = { path = "../example_shared"}
bevy = { version = "*", default-features = false }
rand = { version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3.1"
