[package]
name = "litlnet_server_bevy"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

[lib]
name = "litlnet_server_bevy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"
litlnet_trait = { path = "../litlnet_trait" }
bevy = "*"