[package]
name = "litlnet_tcp_server"
version = "0.1.0"
authors = ["Thierry Berger <contact@thierryberger.com>"]
edition = "2021"

[lib]
name = "litlnet_tcp_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = "*"
litlnet_tcp = { path = "../litlnet_tcp" }
litlnet_trait = { path = "../litlnet_trait" }